Implemented most of functionallity

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ data/images/*
 youtube_token.json
 youtube_client_secret.json
 beatstars_state.json
+client_secret_693088067321-54nie6t90smgtdh4re2pmpmeoreeua3o.apps.googleusercontent.com.json
+secrets/
