--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ youtube_client_secret.json
 beatstars_state.json
 client_secret_693088067321-54nie6t90smgtdh4re2pmpmeoreeua3o.apps.googleusercontent.com.json
 secrets/
+Miniconda3-latest-MacOSX-arm64.sh
