--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@ client_secret_693088067321-54nie6t90smgtdh4re2pmpmeoreeua3o.apps.googleuserconte
 secrets/
 Miniconda3-latest-MacOSX-arm64.sh
 Miniconda*
+*.pickle
+token.pickle
+
